--- a/index.html
+++ b/index.html
@@ -128,75 +128,84 @@
                      <div class="content-body__title">
                         <h3>Ready to learn?</h3>
                         <h2>Featured Courses</h2>
-
                      </div>
                      <button class="content-body button--border">View all courses</button>
                   </div>
-                  <ul class="content-body__block box">
-                     <li class="box__cards">
-                        <div class="box__cards__image">
-                           <img src="img/image01.png" alt="photo">
+                  <div class="content-body__block box">
+                     <div class="box__cards">
+                        <div class="box__cards__content">
+                           <div class="box__cards__image">
+                              <img src="img/image01.png" alt="photo">
+                           </div>
+                           <div class="box__cards__description">
+                              <div class="box__cards__name green">Marketing</div>
+                              <div class="box__cards__item">The Ultimate Google Ads Training Course</div>
+                              <div class="box__cards__list"> <span>$100</span> by Jerome Bell</div>
+                           </div>
                         </div>
-                        <div class="box__cards__description">
-                           <div class="box__cards__name green">Marketing</div>
-                           <div class="box__cards__item">The Ultimate Google Ads Training Course</div>
-                           <div class="box__cards__list"> <span>$100</span> by Jerome Bell</div>
+                     </div>
+                     <div class="box__cards">
+                        <div class="box__cards__content">
+                           <div class="box__cards__image">
+                              <img src="img/image02.png" alt="photo">
+                           </div>
+                           <div class="box__cards__description">
+                              <div class="box__cards__name blue">Management</div>
+                              <div class="box__cards__item">Prduct Management Fundamentals</div>
+                              <div class="box__cards__list"> <span>$480</span>| by Marvin McKinney</div>
+                           </div>
                         </div>
-                     </li>
-                     <li class="box__cards">
-                        <div class="box__cards__image">
-                           <img src="img/image02.png" alt="photo">
+                     </div>
+                     <div class="box__cards">
+                        <div class="box__cards__content">
+                           <div class="box__cards__image">
+                              <img src="img/image03.png" alt="photo">
+                           </div>
+                           <div class="box__cards__description">
+                              <div class="box__cards__name orange ">HR & Recruting</div>
+                              <div class="box__cards__item">HR Management and Analytics</div>
+                              <div class="box__cards__list"> <span>$200 </span> | by Leslie Alexander Li</div>
+                           </div>
                         </div>
-                        <div class="box__cards__description">
-                           <div class="box__cards__name blue">Management</div>
-                           <div class="box__cards__item">Prduct Management Fundamentals</div>
-                           <div class="box__cards__list"> <span>$480</span>| by Marvin McKinney</div>
+                     </div>
+                     <div class="box__cards">
+                        <div class="box__cards__content">
+                           <div class="box__cards__image">
+                              <img src="img/image04.png" alt="photo">
+                           </div>
+                           <div class="box__cards__description">
+                              <div class="box__cards__name green">Management</div>
+                              <div class="box__cards__item">Brand Management & PR Communications</div>
+                              <div class="box__cards__list"> <span>$400</span>| by Dianne Russell</div>
+                           </div>
                         </div>
-                     </li>
-                     <li class="box__cards">
-                        <div class="box__cards__image">
-                           <img src="img/image03.png" alt="photo">
+                     </div>
+                     <div class="box__cards">
+                        <div class="box__cards__content">
+                           <div class="box__cards__image ">
+                              <img src="img/image05.png" alt="photo">
+                           </div>
+                           <div class="box__cards__description">
+                              <div class="box__cards__name blue">Management</div>
+                              <div class="box__cards__item">Business Development Management</div>
+                              <div class="box__cards__list"> <span>$500</span>| by Guy Hawkins</div>
+                           </div>
                         </div>
-                        <div class="box__cards__description">
-                           <div class="box__cards__name orange ">HR & Recruting</div>
-                           <div class="box__cards__item">HR Management and Analytics</div>
-                           <div class="box__cards__list"> <span>$200 </span> | by Leslie Alexander Li</div>
+                     </div>
+                     <div class="box__cards">
+                        <div class="box__cards__content">
+                           <div class="box__cards__image">
+                              <img src="img/image05.png" alt="photo">
+                           </div>
+                           <div class="box__cards__description">
+                              <div class="box__cards__name pink">Design</div>
+                              <div class="box__cards__item">Graphic Design Basic</div>
+                              <div class="box__cards__list"> <span>$100</span> by Jerome Bell</div>
+                           </div>
                         </div>
-                     </li>
-                     <li class="box__cards">
-                        <div class="box__cards__image">
-                           <img src="img/image04.png" alt="photo">
-                        </div>
-                        <div class="box__cards__description">
-                           <div class="box__cards__name green">Management</div>
-                           <div class="box__cards__item">Brand Management & PR Communications</div>
-                           <div class="box__cards__list"> <span>$400</span>| by Dianne Russell</div>
-                        </div>
-                     </li>
-                     <li class="box__cards">
-                        <div class="box__cards__image ">
-                           <img src="img/image05.png" alt="photo">
-                        </div>
-                        <div class="box__cards__description">
-                           <div class="box__cards__name blue">Management</div>
-                           <div class="box__cards__item">Business Development Management</div>
-                           <div class="box__cards__list"> <span>$500</span>| by Guy Hawkins</div>
-                        </div>
-                     </li>
-                     <li class="box__cards">
-                        <div class="box__cards__image">
-                           <img src="img/image06.png" alt="photo">
-                        </div>
-                        <div class="box__cards__description">
-                           <div class="box__cards__name pink">Design</div>
-                           <div class="box__cards__item">Graphic Design Basic</div>
-                           <div class="box__cards__list"> <span>$100</span> by Jerome Bell</div>
-                        </div>
-                     </li>
+                     </div>
 
-                  </ul>
-               </div>
-            </div>
+                  </div>
          </section>
       </main>
       <footer class="footer"></footer>
