--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
          <section class="page__main content-block">
             <div class="content-block__container">
                <div class="content-block__body content-body">
-                  <div class="content-body__header">
+                  <div class=" content-body__header">
                      <div class="content-body__title">
                         <h3>Ready to learn?</h3>
                         <h2>Featured Courses</h2>
@@ -206,6 +206,8 @@
                      </div>
 
                   </div>
+               </div>
+            </div>
          </section>
       </main>
       <footer class="footer"></footer>
